<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_baseline_bookmark_border_24"
            android:title="@string/menu_bookmarks" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_novels"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_novels" />

        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/menu_blog" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_search" />

        <item
            android:id="@+id/nav_book_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_book_about" />

        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_read" />
    </group>

</menu>