<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_novels">

    <fragment
        android:id="@+id/nav_profile"
        android:name="tl.rulate.ru.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_novels"
        android:name="tl.rulate.ru.ui.novels.NovelsFragment"
        android:label="@string/menu_novels"
        tools:layout="@layout/fragment_novels" />

    <fragment
        android:id="@+id/nav_blog"
        android:name="tl.rulate.ru.ui.blog.BlogFragment"
        android:label="@string/menu_blog"
        tools:layout="@layout/fragment_blog" />

    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="tl.rulate.ru.ui.bookmarks.BookmarksFragment"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />

    <fragment
        android:id="@+id/nav_search"
        android:name="tl.rulate.ru.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_read"
        android:name="tl.rulate.ru.ui.indepentUi.ReaderFragment"
        android:label="@string/menu_read"
        tools:layout="@layout/fragment_reader" />

    <fragment
        android:id="@+id/nav_book_about"
        android:name="tl.rulate.ru.ui.indepentUi.BookFragment"
        android:label="@string/menu_book_about"
        tools:layout="@layout/fragment_book" />

</navigation>