<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_chapter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter_title"
        style="@style/headerText"/>

    <LinearLayout
        android:paddingStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_chapter_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapter_status" />

        <TextView
            android:paddingStart="5dp"
            android:id="@+id/tv_chapter_can_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapter_can_read" />
    </LinearLayout>


</LinearLayout>