<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_book_title"
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/book_title" />

            <!--avatar-->
            <ImageView
                android:id="@+id/iv_book_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:padding="20dp"
                android:src="@drawable/ic_baseline_highlight_off_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/propertyText"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating" />

                    <TextView
                        style="@style/propertyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quality_rating" />

                    <TextView
                        style="@style/propertyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/likes" />

                    <TextView
                        style="@style/propertyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_name" />

                    <TextView
                        style="@style/propertyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/origin_status" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_rating"
                        style="@style/ordinaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rating" />

                    <TextView
                        android:id="@+id/tv_quality_rating"
                        style="@style/ordinaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/quality_rating" />

                    <TextView
                        android:id="@+id/tv_likes"
                        style="@style/ordinaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/likes" />

                    <TextView
                        android:id="@+id/tv_author_name"
                        style="@style/ordinaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_name" />

                    <TextView
                        android:id="@+id/tv_origin_status"
                        style="@style/ordinaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/origin_status" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_add_to_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_to_bookmarks" />

            <TextView
                style="@style/ordinaryText"
                android:id="@+id/tv_book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_description" />

            <View style="@style/bottomLine" />

            <TextView
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chapters" />

            <View style="@style/bottomLine" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_chapters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <View style="@style/bottomLine" />

            <TextView
                style="@style/headerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments" />

            <View style="@style/bottomLine" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_book_warning"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_background"
        android:gravity="center"
        android:text="@string/its_your_first_book"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>