<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/authorization"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorFormBackground" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorFormBackground"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/log_et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:hint="@string/login"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/log_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:lineSpacingExtra="7dp"
        android:text="@string/do_not_have_account_question"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorFormBackground" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/blue"
        android:text="@string/authorize"
        android:textAllCaps="false"
        android:textColor="@color/colorFormBackground" />

</RelativeLayout>