<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_comment_avatar"
        android:layout_width="24dp"
        android:layout_height="24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="5dp">

        <TextView
            android:id="@+id/tv_comment_body"
            style="@style/headerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp">

            <TextView
                android:id="@+id/tv_author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name" />

            <TextView
                android:id="@+id/tv_comment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:text="@string/date" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>